--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,7 +4,8 @@
 
 .home {
   & > * {
-    .ins-lr(15px);
+    .ins-tblr(15px);
+    .end-outs-tb(0);
   }
 
   .intro {
@@ -19,13 +20,12 @@
   }// .intro
 
   .space-images {
-    .flex-center();
+    .flex-space-between();
     width: 100%;
 
     img {
       height: 100%;
-      width: 28%;
-      margin: 20px 2.5%;
+      width: 30%;
       border-radius: @radius-1;
 
       @media @is-phone {
@@ -47,9 +47,9 @@
     .flex-space-between();
     width: 100%;
 
-    margin-top: 60px;
+    margin-top: 50px;
     border-top: 1px solid @main-border-color;
-    padding: 50px 60px;
+    padding: 50px 50px;
 
     @media @is-phone {
       .flex-center(@main-axis: column-reverse);
